# Kokoros

./: Cargo.toml  install.ps1  setup.iss  test_ui.py
.cargo/: config.toml
src/: main.rs
src/onn/: config.rs  mod.rs  ort_base.rs  ort_koko.rs
src/serve/: openai.rs
src/tts/: koko.rs
