[package]
name = "koko"
version = "0.1.0"
edition = "2021"

[dependencies]
hound = "3.5.1"
indicatif = "0.17.9"
ndarray = "0.16.1"
lazy_static = "1.5.0"
regex = "1.9.5"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde_json = "1.0.135"
espeak-rs = "0.1.9"
clap = { version = "4.5.26", features = ["derive"] }

# ONNX Runtime dependencies with GPU support
ort = { version = "2.0.0-rc.9", default-features = false, features = ["cuda"] }

# Web server dependencies
axum = { version = "0.7", features = ["http2", "macros"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "1.0", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.9", features = ["coreml"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.9", features = ["cuda", "directml"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.9", features = ["cuda"] }
